# parallel-comp-aalto

./: .gitignore  CMakeLists.txt  README.md  main.cpp  util.cpp  util.h  v0.cpp  v1.cpp
